Fix chat scroll issue
Seems that "flex-direction: column-reverse" is badly handled.
Might be related to an issue in the HTML / CSS Renderer engine.

There is still an issue : when overflowing, the scroll is failing to go to last child.

--- a/code/UI/Chatbox/Chatbox.razor.scss
+++ b/code/UI/Chatbox/Chatbox.razor.scss
@@ -16,7 +16,7 @@ Chatbox {
 
     .chat {
         flex-grow: 1;
-        flex-direction: column-reverse;
+        flex-direction: column;
         overflow: scroll;
         gap: 4px;
         pointer-events: none;
